feat: add api documentation for auth and limit handler
